// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlTopBar > matches its snapshot with a crumb 1`] = `
"<header data-v-2e629669="" class="top-bar"><a data-v-2e629669="" href="/" class="brand"><svg data-v-2e629669="" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true">
      <rect x="0" y="9" width="7" height="7" rx="1.5" fill="#B4F03C"></rect>
      <rect x="9" y="11" width="5" height="5" rx="1.2" fill="#22D3EE"></rect>
      <rect x="4" y="2" width="5" height="5" rx="1.2" fill="#FF3EA5"></rect>
      <rect x="12" y="4" width="4" height="4" rx="1" fill="#FFB020"></rect>
    </svg><span data-v-2e629669="" class="brand-name">NEONPIXELS</span>
    <!--v-if-->
  </a><span data-v-2e629669="" class="crumb-sep" aria-hidden="true">/</span><a data-v-2e629669="" href="/" class="crumb-link">All properties</a><span data-v-2e629669="" class="crumb-sep" aria-hidden="true">/</span><span data-v-2e629669="" class="crumb-current">basin.fm</span><span data-v-2e629669="" class="grow"></span>
  <!--v-if-->
  <div data-v-2e629669="" class="user-button-stub"></div>
</header>"
`;

exports[`ControlTopBar > matches its snapshot with a range selector 1`] = `
"<header data-v-2e629669="" class="top-bar"><a data-v-2e629669="" href="/" class="brand"><svg data-v-2e629669="" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true">
      <rect x="0" y="9" width="7" height="7" rx="1.5" fill="#B4F03C"></rect>
      <rect x="9" y="11" width="5" height="5" rx="1.2" fill="#22D3EE"></rect>
      <rect x="4" y="2" width="5" height="5" rx="1.2" fill="#FF3EA5"></rect>
      <rect x="12" y="4" width="4" height="4" rx="1" fill="#FFB020"></rect>
    </svg><span data-v-2e629669="" class="brand-name">NEONPIXELS</span><span data-v-2e629669="" class="brand-sub">CONTROL</span></a>
  <nav data-v-2e629669="" class="top-nav">
    <ul data-v-2e629669="" class="nav-list">
      <li data-v-2e629669=""><a data-v-2e629669="" href="/" class="nav-link active">Overview</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#properties" class="nav-link">Properties</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#alerts" class="nav-link">Alerts</a></li>
    </ul>
  </nav>
  <ul data-v-434991f8="" data-v-2e629669="" class="range-selector" aria-label="Date range">
    <li data-v-434991f8=""><button data-v-434991f8="" type="button" class="range-option" aria-pressed="false">7D<span data-v-434991f8="" class="sr-only"> (last 7 days)</span></button></li>
    <li data-v-434991f8=""><button data-v-434991f8="" type="button" class="range-option active" aria-pressed="true">30D<span data-v-434991f8="" class="sr-only"> (last 30 days)</span></button></li>
    <li data-v-434991f8=""><button data-v-434991f8="" type="button" class="range-option" aria-pressed="false">60D<span data-v-434991f8="" class="sr-only"> (last 60 days)</span></button></li>
  </ul>
  <div data-v-2e629669="" class="user-button-stub"></div>
</header>"
`;

exports[`ControlTopBar > matches its snapshot with the property menu closed 1`] = `
"<header data-v-2e629669="" class="top-bar"><a data-v-2e629669="" href="/" class="brand"><svg data-v-2e629669="" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true">
      <rect x="0" y="9" width="7" height="7" rx="1.5" fill="#B4F03C"></rect>
      <rect x="9" y="11" width="5" height="5" rx="1.2" fill="#22D3EE"></rect>
      <rect x="4" y="2" width="5" height="5" rx="1.2" fill="#FF3EA5"></rect>
      <rect x="12" y="4" width="4" height="4" rx="1" fill="#FFB020"></rect>
    </svg><span data-v-2e629669="" class="brand-name">NEONPIXELS</span>
    <!--v-if-->
  </a><span data-v-2e629669="" class="crumb-sep" aria-hidden="true">/</span><a data-v-2e629669="" href="/" class="crumb-link">All properties</a><span data-v-2e629669="" class="crumb-sep" aria-hidden="true">/</span>
  <div data-v-bda2066d="" data-v-2e629669="" class="switcher"><button data-v-bda2066d="" type="button" class="switcher-trigger" aria-haspopup="menu" aria-expanded="false" aria-controls="v-0"><span data-v-bda2066d="" class="switcher-name">basin.fm</span><svg data-v-bda2066d="" class="switcher-icon" width="10" height="14" viewBox="0 0 10 14" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
        <path data-v-bda2066d="" d="M2 5l3-3 3 3M2 9l3 3 3-3"></path>
      </svg></button>
    <!--v-if-->
  </div><span data-v-2e629669="" class="grow"></span>
  <!--v-if-->
  <div data-v-2e629669="" class="user-button-stub"></div>
</header>"
`;

exports[`ControlTopBar > matches its snapshot without a crumb 1`] = `
"<header data-v-2e629669="" class="top-bar"><a data-v-2e629669="" href="/" class="brand"><svg data-v-2e629669="" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true">
      <rect x="0" y="9" width="7" height="7" rx="1.5" fill="#B4F03C"></rect>
      <rect x="9" y="11" width="5" height="5" rx="1.2" fill="#22D3EE"></rect>
      <rect x="4" y="2" width="5" height="5" rx="1.2" fill="#FF3EA5"></rect>
      <rect x="12" y="4" width="4" height="4" rx="1" fill="#FFB020"></rect>
    </svg><span data-v-2e629669="" class="brand-name">NEONPIXELS</span><span data-v-2e629669="" class="brand-sub">CONTROL</span></a>
  <nav data-v-2e629669="" class="top-nav">
    <ul data-v-2e629669="" class="nav-list">
      <li data-v-2e629669=""><a data-v-2e629669="" href="/" class="nav-link active">Overview</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#properties" class="nav-link">Properties</a></li>
      <li data-v-2e629669=""><a data-v-2e629669="" href="#alerts" class="nav-link">Alerts</a></li>
    </ul>
  </nav>
  <!--v-if-->
  <div data-v-2e629669="" class="user-button-stub"></div>
</header>"
`;
